tests/ui/semaphore_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/semaphore_option_name.rs:15:22
   |
11 |     let semaphore = pin!(Semaphore::context());
   |                     -------------------------- a temporary with access to the borrow is created here ...
12 |
13 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
14 |     let mut opts = SemaphoreOptions::default();
15 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
18 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `SemaphoreContext`
